<resources>

    <string name="app_name">EncryptedCalendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_month">MonthActivity</string>
    <string name="title_activity_day">DayActivity</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_activity_password">Password</string>
    <string name="menu_password">Password</string>
    <string name="testPassword">testPassword</string>
    <string name="Title">Title</string>
    <string name="Lieu">Lieu</string>
    <string name="Description">Description</string>
    <string name="Cancel">Cancel</string>
    <string name="OK">OK</string>

</resources>